force-app/main/default/objects/Itinerary__c.object
<CustomObject>
    <fields>
        <fullName>ActivityType__c</fullName>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flight</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Activity</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Meal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Booking__c</fullName>
        <label>Booking</label>
        <referenceTo>Travel_Booking__c</referenceTo>
        <relationshipLabel>Itineraries</relationshipLabel>
        <relationshipName>Itineraries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Itinerary</label>
    <listViews>
        <fullName>All_Itineraries</fullName>
        <columns>NAME</columns>
        <columns>Booking__c</columns>
        <columns>Day__c</columns>
        <columns>Date__c</columns>
        <columns>Location__c</columns>
        <columns>ActivityType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Itineraries</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Flights</fullName>
        <columns>NAME</columns>
        <columns>Booking__c</columns>
        <columns>Date__c</columns>
        <columns>Location__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ActivityType__c</field>
            <operation>equals</operation>
            <value>Flight</value>
        </filters>
        <label>Flights</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Itinerary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itineraries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>